<resources>
    <string name="app_name">AutoHome Client</string>
    <string name="title_activity_start_screen">StartScreen</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome!</string>
    <string name="login_button">Log In</string>
    <string name="register_button">Register</string>
    <string name="title_activity_login">Login</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="title_activity_register">Register</string>
    <string name="email_hint">Email</string>
    <string name="confirm_password_hint">Confirm Password</string>
	<string name="toolbar_title">AutoHome</string>
	<string name="title_activity_rooms">Rooms</string>
	<string name="title_activity_room">Room</string>
	<string name="title_activity_group_creator">GroupCreator</string>
	<string name="room_name_hint">Room Name</string>
	<string name="create_new_room_dialog_title">Create New Room</string>
	<string name="create_new_room_dialog_positive">Create</string>
	<string name="negative">Cancel</string>
	<string name="title_activity_schedule_listing">ScheduleListing</string>
	<string name="title_activity_unit_listing">UnitListing</string>
</resources>
