<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:tools="http://schemas.android.com/tools"
				xmlns:app="http://schemas.android.com/apk/res-auto"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				tools:context="com.autohome.autohomeclient.Register">

	<include
		android:id="@+id/toolbar"
		layout="@layout/toolbar"/>

	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_below="@id/toolbar">

		<TextView
			android:id="@+id/register_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:text="@string/register_button"
			android:theme="@style/Base.TextAppearance.AppCompat.Display3"
			android:textColor="@color/primary_text"
			android:textSize="56sp"
			android:fontFamily="sans-serif-light"/>

		<com.rengwuxian.materialedittext.MaterialEditText
			android:layout_width="300sp"
			android:layout_height="wrap_content"
			android:id="@+id/register_username"
			android:hint="@string/username_hint"
			app:baseColor="#000000"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="20sp"
			android:layout_below="@id/register_text"/>

		<com.rengwuxian.materialedittext.MaterialEditText
			android:layout_width="300sp"
			android:layout_height="wrap_content"
			android:id="@+id/register_email"
			android:hint="@string/email_hint"
			app:baseColor="#000000"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="20dp"
			android:layout_below="@id/register_username"
			android:inputType="textEmailAddress"/>

		<com.rengwuxian.materialedittext.MaterialEditText
			android:layout_width="300sp"
			android:layout_height="wrap_content"
			android:id="@+id/register_password"
			android:hint="@string/password_hint"
			app:baseColor="#000000"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="20dp"
			android:layout_below="@id/register_email"
			android:inputType="textPassword"
			app:minCharacters="8"/>

		<com.rengwuxian.materialedittext.MaterialEditText
			android:layout_width="300sp"
			android:layout_height="wrap_content"
			android:id="@+id/register_password_confirm"
			android:hint="@string/confirm_password_hint"
			app:baseColor="#000000"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="20dp"
			android:layout_below="@id/register_password"
			android:inputType="textPassword"
			app:minCharacters="8"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/register_button"
			android:id="@+id/login_login_button"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="20dp"
			android:layout_below="@id/register_password_confirm"
			android:textColor="@color/primary_text"
			android:background="@drawable/button"
			android:theme="@style/Base.TextAppearance.AppCompat.Button"
			android:textAllCaps="true"
			android:fontFamily="sans-serif-medium"/>

	</RelativeLayout>

</RelativeLayout>
