<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.autohome.autohomeclient.StartScreen">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <RelativeLayout
        android:id="@+id/start_screen_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/toolbar">

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/welcome"
            android:textSize="50sp"
            android:theme="@style/Base.TextAppearance.AppCompat.Display4"
            android:textColor="@color/primary_text"/>

        <Button
            android:id="@+id/start_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@color/primary_text"
            android:background="@drawable/button"/>

        <Button
            android:id="@+id/start_register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_button"
            android:layout_alignTop="@+id/start_login_button"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textColor="@color/primary_text"
            android:background="@drawable/button"/>

    </RelativeLayout>

</RelativeLayout>
