<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.autohome.autohomeclient.Login">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <RelativeLayout
        android:id="@+id/start_screen_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/toolbar">

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/login_button"
            android:theme="@style/Base.TextAppearance.AppCompat.Display3"
            android:textColor="@color/primary_text"
            android:textSize="56sp"
			android:layout_marginTop="10sp"
			android:fontFamily="sans-serif-light"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:hint="@string/username_hint"
            app:baseColor="#000000"
			app:primaryColor="@color/accent"
			android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_below="@id/login_text"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:hint="@string/password_hint"
            app:baseColor="#000000"
			app:primaryColor="@color/accent"
			android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_below="@id/username"
            android:inputType="textPassword"/>

        <Button
			android:id="@+id/login_login_button"
			android:layout_width="wrap_content"
			android:layout_height="36dp"
			android:minWidth="88dp"
			android:padding="5dp"
			android:layout_centerVertical="true"
			android:layout_centerHorizontal="true"
			android:text="@string/login_button"
			android:textColor="@color/primary_text"
			android:background="@drawable/button"
			android:theme="@style/Base.TextAppearance.AppCompat.Button"
			android:textAllCaps="true"
			android:onClick="login"
			android:fontFamily="sans-serif-medium"/>
    </RelativeLayout>

</RelativeLayout>
